Quorum/Library/Tests/Actions/Pass/NestedConditionalRepeat2.quorum
class Main
    action Main
        integer i = 1
        boolean firstCase = false
        repeat 4 times
            if firstCase
                output square(square(i))
            else
                output cube(cube(i))
            end
            i = i + 1
        end
    end
 
    action square(integer i) returns integer
        return i * i
    end

    action cube(integer i) returns integer
        return i * i * i
    end
end
