Quorum/Library/Tests/Actions/Fail/MissingReturn5.quorum
class Main 
    action Main
        Test()
    end

    action Test returns boolean
        if 1 = 1
        else
        end
    end
end